[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybetterloader_sudo-matcha"
version = "1.0.0"
authors = [
  { name="Milo Pitsch", email="jskresl@gmail.com" },
]
description = "A quirky loader/context manager that always has something to say!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sudo-matcha/pybetterloader"